fix mobile nav icons jumping

--- a/web/app/themes/platformlondon/style.css
+++ b/web/app/themes/platformlondon/style.css
@@ -1484,13 +1484,6 @@ footer h6 {
   background-color: rgb(24 85 0 / var(--tw-bg-opacity)) !important;
 }
 
-.wp-block-navigation__responsive-container-close {
-  padding-top: 1rem;
-  padding-right: 0.75rem;
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .wp-block-navigation__responsive-container.is-menu-open.has-modal-open .wp-block-navigation__responsive-container-content .wp-block-navigation__container {
   width: 100%;
 }
@@ -1550,6 +1543,29 @@ header .wp-block-search {
 header a:focus,
 header a:hover {
     background: none;
+}
+
+.mobile-nav-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 4px;
+}
+
+.wp-block-navigation__responsive-container:not(.is-menu-open.has-modal-open) .mobile-nav-wrapper{
+    display: none;
+  }
+
+.has-modal-open .admin-bar .is-menu-open .wp-block-navigation__responsive-dialog{
+    margin-top: 0;
+}
+
+.wp-block-navigation__responsive-container-close {
+    position: relative;
+}
+
+.image-with-filter {
+    filter: brightness(0) invert(1)
 }
 
 /* Headings */
